# pastix

./: .clang-format  .gitignore  .gitlab-ci-env.sh  .gitlab-ci-filelist.sh  .gitlab-ci.yml  .gitmodules  .hgignore  CMakeLists.txt  CTestConfig.cmake  ChangeLog.md  README.md  pastix.pc.in  pastix_env.sh.in  pastixf.pc.in  sonar-project.properties  supernodes_ordering.sh  use_eztrace
.gitlab/check_link/: CMakeLists.txt  link_cmake.sh  link_pkgconfig.sh
attic/starpu/: CMakeLists.txt  starpu_zsubmit_tasks.h  starpu_zsubmit_tasks_he.c  starpu_zsubmit_tasks_po.c  starpu_zsubmit_tasks_sy.c  starpu_zupdo_he.c  starpu_zupdo_sy.c
attic/tools/: CMakeLists.txt  genapi.sh
bcsc/: CMakeLists.txt  bcsc.c  bcsc.h  bcsc_fake.c  bcsc_z.h  bcsc_zcompute.c  bcsc_zinit.c  bcsc_znorm.c  bcsc_zspmv.c  bvec.c  bvec.h  bvec_zcompute.c  bvec_zlapmr.c  bvec_zmpi_comm.c  z_bcsc.h  z_bcsc_matrixvector.c  z_bcsc_norm.c  z_csc_intern_compute_he.c  z_csc_intern_io.c  z_csc_intern_updown.c
calu/: CMakeLists.txt  GenerateZDCS.cmake.optional  Makefile  Makefile.gen  Makefile.internal  Makefile.tau  make.inc.example
calu/compute/: CMakeLists.txt  Makefile  pzbarrier.c  pzgeadd.c  pzgebrd_ge2tb.c  pzgebrd_tb2bd.c  pzgelqf.c  pzgelqfrh.c  pzgemm.c  pzgeqp3.c  pzgeqrf.c  pzgeqrfrh.c  pzgetmi2.c  pzgetrf_incpiv.c  pzgetrf_nopiv.c  pzgetrf_reclap.c  pzgetrf_rectil.c  pzgetrf_tntpiv.c  pzhbcpy_t2bl.c  pzhegst.c  pzhemm.c  pzher2k.c  pzherbt.c  pzherk.c  pzhetrd_hb2st.c  pzhetrd_he2hb.c  pzlacpy.c  pzlag2c.c  pzlange.c  pzlanhe.c  pzlansy.c  pzlarft_blgtrd.c  pzlaset.c  pzlaset2.c  pzlaswp.c  pzlaswpc.c  pzlauum.c  pzpack.c  pzplghe.c  pzplgsy.c  (+83 more)
calu/control/: CMakeLists.txt  Makefile  allocate.c  allocate.h  async.c  async.h  auxiliary.c  auxiliary.h  bulge.h  common.h  compute_z.h  context.c  context.h  control.c  control.h  core_blas_dag.h  descriptor.c  descriptor.h  gkkleader.c  gkkleader.h  global.h  plasma_f77.c  plasma_f90.f90  plasma_mf77.c  plasma_zcf90.F90  plasma_zf77.c  plasma_zf90.F90  plasma_zf90_wrappers.F90  plasmaos-hwloc.c  plasmaos.c  plasmawinthread.c  plasmawinthread.h  primes.c  primes.h  pztile.c  tile.c  tile.h  workspace.c  workspace.h  workspace_z.c  (+1 more)
calu/core_blas/: CMakeLists.txt  Makefile  core_alloc.c  core_dzasum.c  core_zbrdalg.c  core_zgbelr.c  core_zgblrx.c  core_zgbrce.c  core_zgeadd.c  core_zgelqt.c  core_zgemm.c  core_zgemm_tile.c  core_zgemv.c  core_zgemv_tile.c  core_zgeqp3_norms.c  core_zgeqp3_pivot.c  (+74 more)
calu/core_blas-eztrace/: Makefile  coreblas.c  coreblas_ev_codes.h  coreblas_macros.h  coreblas_z.c  eztrace_convert_coreblas.c
example/: CMakeLists.txt  CTestLists.txt  Makefile.in  analyze.c  bcsc_matvec_tests.c  bcsc_norm_tests.c  bench_facto.c  clifexec.c  compare_tolerance.c  compress.c  compress_afacto_test.c  compress_bfacto_test.c  cppsimple_dist.cpp  dump_rank.c  isolate.c  multidof.c  murge-product.c  murge.c  optimal_ordering.c  ordering_grid.c  pastix_benchmark.c  personal.c  reentrant.c  refinement.c  regular_first_sep.c  schur.c  simple.c  simple_dist.c  simple_param.c  simple_solve_and_refine.c  simple_trans.c  simple_vdof.c  spm_convert_tests.c  spm_matvec_tests.c  spm_norm_tests.c  step-by-step-pattern.c  step-by-step.c  z_analyze.c  z_bcsc_tests.c  z_spm_matvec_test.c  (+2 more)
kernels/: CMakeLists.txt  core_zgeadd.c  core_zgelrops.c  core_zgelrops_RRQR.c  core_zgelrops_SVD.c  core_zgelrops_dbg.c  core_zgelrops_rrqr.c  core_zgelrops_svd.c  core_zgelrops_update.c  core_zgelrops_update_Cfr.c  core_zgelrops_update_Clr.c  core_zgelrops_update_Cnull.c  core_zgemdm.c  core_zgemmsp.c  core_zgetmo.c  core_zgetrfsp.c  core_zgetro.c  core_zhetrfsp.c  core_zlr2xx.c  core_zlrdbg.c  core_zlrmm.c  core_zlrmm_Cfr.c  core_zlrmm_Clr.c  core_zlrmm_Cnull.c  core_zlrnrm.c  core_zlrothu.c  core_zplrnt.c  core_zpotrfsp.c  core_zpqrcp.c  core_zpxtrfsp.c  core_zrqrcp.c  core_zrqrrt.c  core_zscalo.c  core_zsytrfsp.c  core_ztqrcp.c  core_ztradd.c  core_ztrsmsp.c  core_zxx2fr.c  core_zxx2lr.c  cpublok_zadd.c  (+43 more)
pastix/: CMakeLists.txt  myversion.sh  sopalin_z_sopalin3d_ge.c  sopalin_z_sopalin3d_he.c  sopalin_z_sopalin3d_po.c  sopalin_z_sopalin3d_sy.c
sopalin/: CMakeLists.txt  coeftab.c  coeftab.h  coeftab_z.c  coeftab_z.h  coeftab_zcinit.c  coeftab_zcompress.c  coeftab_zdiff.c  coeftab_zdump.c  coeftab_zinit.c  coeftab_zschur.c  commun.h  diag.c  mc64a.F  pastix.c  pastix_rhs.c  pastix_task_solve.c  pastix_task_sopalin.c  schur.c  sequential_zdiag.c  sequential_zgetrf.c  sequential_zhetrf.c  sequential_zpotrf.c  sequential_zpxtrf.c  sequential_zsytrf.c  sequential_ztrsm.c  sopalin3d.h  sopalin_data.h  sopalin_define.h  sopalin_thread.c  sopalin_thread.h  sopalin_time.h  z_coefinit.c  z_compute_gemdm.c  z_compute_trsm.c  z_contrib.c  z_debug_dump.c  z_debug_dump.h  z_ooc.c  z_ooc.h  (+11 more)
spm/: CMakeLists.txt  integer_sort.c  integer_sort_mtypes.c  spm.c  spm.h  spm_dof_extend.c  spm_dofs.c  spm_drivers.h  spm_expand.c  spm_gen_fake_values.c  spm_integers.c  spm_io.c  spm_read_driver.c  z_spm.c  z_spm.h  z_spm_2dense.c  z_spm_convert_col_row_major.c  z_spm_convert_to_csc.c  z_spm_convert_to_csr.c  z_spm_convert_to_ijv.c  z_spm_dof_extend.c  z_spm_dofs2flat.c  z_spm_expand.c  z_spm_genrhs.c  z_spm_integer.c  z_spm_laplacian.c  z_spm_matrixvector.c  z_spm_norm.c  z_spm_print.c  z_spm_scal.c
test/: CMakeLists.txt  bcsc_matvec_tests.c  bcsc_norm_tests.c  bcsc_spmv_tests.c  bcsc_spmv_time.c  bvec_applyorder_tests.c  bvec_gemv_tests.c  bvec_tests.c  p_spm_tests.c  spm_convert_tests.c  spm_dof_expand_tests.c  spm_dof_matvec_tests.c  spm_dof_norm_tests.c  spm_matvec_tests.c  spm_norm_tests.c  tests.h  tests_auxiliary.c  vaklidate_expand.sh  validate_convert.sh  validate_exapnd.sh  validate_expand.sh  z_bcsc_tests.c  z_bvec_tests.c  z_ge2lr_performance.c  z_ge2lr_stability.c  z_ge2lr_tests.c  z_lowrank_tests.c  z_lrmm_tests.c  z_rradd_tests.c  z_spm_matvec_test.c  z_spm_tests.c  z_tests.h
testing/: CMakeLists.txt  testing_zge2lr.c  testing_zgradd.c  testing_zlrm2.c  testing_zlrmge.c  testing_zlrmm.c  testing_zmain.c  testing_zmain.h  testing_zrradd.c  testing_zrun.c
wrappers/: CMakeLists.txt
(+1452 files in other folders)
